--- a/installer/ReleaseNotes.txt
+++ b/installer/ReleaseNotes.txt
@@ -4,6 +4,51 @@ Below are the release notes for the full RTG suite, upon which
 RTG.VERSION is based.  Not all features described below may be included
 in this product.
 
+RTG Core 3.8.2 (2017-06-20)
+---------------------------
+
+This release primarily includes bugfixes and minor improvements:
+
+* vcfeval: Records where the REF/ALT contain bases not permitted by the
+  VCF specification are now skipped (and reported in the log) rather
+  than terminating execution.
+
+* vcfeval: (`combine` and `ga4gh` output modes only) These modes were
+  inserting a redundant VCF header entry containing the command line,
+  which has been removed.
+
+* vcfeval: GA4GH output mode now supports loose positional matching of
+  variants (within +/-30bp by default, and adjustable via
+  --Xloose-match-distance).
+
+* many: Prevent number formatting issues in non-English locales. The
+  locale is now forced to US.
+
+* many: Some commands were not appending gzip termination blocks to VCF
+  outputs, which could result in subsequent warning messages being
+  produced by some third party tools.
+
+* many: Improve the consistency of exception handling in cases where the
+  exception is thrown in a worker thread.
+
+* many: Attempting to supply file lists via shell process redirection
+  would fail in non-obvious ways. File lists from process redirection
+  are not currently supported and are now checked for up-front.
+
+* minor: When setting up rtg bash tab completion, issue a warning if an
+  incompatible completion function has already been installed. (This can
+  happen on some linux distros if you have the system `bash-completion`
+  package installed and attempt to tab-complete rtg before installing
+  rtg bash completion.)
+
+* minor: Fix a typo in the example configuration settings in rtg.cfg
+  (specifically, RTG_JAVA_OPTS was incorrectly listed as
+  RTG_JAVA_OPTIONS).
+
+
+Previous releases
+=================
+
 RTG Core 3.8.1 (2017-05-29)
 ---------------------------
 
@@ -44,10 +89,6 @@ This release primarily includes bugfixes and minor improvements:
 
 * popsim: Now includes the random number seed in the VCF header for
   consistency with with other simulation commands.
-
-
-Previous releases
-=================
 
 RTG Core 3.8 (2017-05-15)
 -------------------------
